tests/NormalTests/paczka1/small_fuzzy/87658709.err
Error in line 6: arkkZneJ S667 12,3
Error in line 5: 7n9S S157 63,8
Error in line 7: c8q5Q8ZaE S82 61,8
Error in line 14: c8q5Q8ZaE S157 232,95
